# divvunspell-sdk-nodejs

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  shell.nix
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
src/: lib.rs
test/: spellchecker.test.js
